# ChangeLog for sci-libs/blas-reference
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-reference/ChangeLog,v 1.47 2010/11/14 12:35:39 jlec Exp $

*blas-reference-20070226-r2 (14 Nov 2010)

  14 Nov 2010; Justin Lecher <jlec@gentoo.org>
  +blas-reference-20070226-r2.ebuild,
  +files/blas-reference-20070226-pkg-config.patch:
  Fix for prefix linking, #343113

  02 Oct 2010; Fabian Groffen <grobian@gentoo.org>
  blas-reference-20070226-r1.ebuild:
  Marked ~x64-macos, bug #333981

*blas-reference-20070226-r1 (07 Mar 2010)

  07 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +blas-reference-20070226-r1.ebuild:
  Moved to EAPI=3 for PREFIX support, imported prefix patches from overlay,
  keyworded {amd64,x86}-linux

  22 Aug 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/blas-reference-20070226-autotool.patch:
  Removed bashisms in tests, closing bug #233953

  21 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org>
  blas-reference-20070226.ebuild:
  Removed pkg-config in RDEPEND (see bug #217278) and moved doc to RDEPEND

  04 Mar 2008; Markus Dittrich <markusle@gentoo.org>
  blas-reference-20070226.ebuild:
  Switched to proper BSD license (see bug #212215).

  19 Dec 2007; Justin Bronder <jsbronder@gentoo.org>
  blas-reference-20070226.ebuild:
  Move ESELECT_PROF so binary packages work.

  12 Nov 2007; Sébastien Fabbro <bicatali@gentoo.org>
  files/blas-reference-20070226-autotool.patch:
  Autotools version changed to 2.59 in patch.

  11 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org>
  blas-reference-20070226.ebuild:
  fixed lib->get_libdir for eselect bug workaround

  10 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org>
  -files/blas-reference-19940131-autotool.patch, -files/Makefile,
  -files/eselect-reference, -files/f77-reference,
  -blas-reference-19940131-r3.ebuild, -blas-reference-19940131-r4.ebuild,
  blas-reference-20070226.ebuild: