@@ -1,8 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-reference/blas-reference-20070226.ebuild,v 1.18 2008/12/07 18:26:29 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-reference/blas-reference-20070226.ebuild,v 1.19 2010/12/16 14:25:50 jlec Exp $
 
-inherit eutils autotools fortran multilib flag-o-matic
+inherit eutils autotools multilib flag-o-matic toolchain-funcs
 
 LAPACKPV="3.1.1"
 LAPACKPN="lapack-lite"
@@ -23,9 +23,7 @@ RDEPEND="${DEPEND}
 S="${WORKDIR}/${LAPACKPN}-${LAPACKPV}"
 
 pkg_setup() {
-	FORTRAN="g77 gfortran ifc"
-	fortran_pkg_setup
-	if  [[ ${FORTRANC} == if* ]]; then
+	if  [[ $(tc-getFC) == if* ]]; then
 		ewarn "Using Intel Fortran at your own risk"
 		LDFLAGS="$(raw-ldflags)"
 	fi
