@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/blas-reference
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-reference/ChangeLog,v 1.47 2010/11/14 12:35:39 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-reference/ChangeLog,v 1.48 2010/12/16 14:25:50 jlec Exp $
+
+  16 Dec 2010; Justin Lecher <jlec@gentoo.org> blas-reference-20070226.ebuild,
+  blas-reference-20070226-r1.ebuild, blas-reference-20070226-r2.ebuild:
+  Removal of fortran.eclass, #348851
 
 *blas-reference-20070226-r2 (14 Nov 2010)
 
